[project]
name = "nurse-rostering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi-mail>=1.5.2",
    "boto3>=1.40.50",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.19.0",
    "holidays>=0.76",
    "langchain-anthropic>=0.3.17",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.27",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "numpy[standard]>=2.2.5",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "psutil>=7.0.0",
    "pymssql>=2.3.8",
    "pymysql>=1.1.1",
    "python-jose>=3.5.0",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "timer>=0.3.0",
    "uvicorn>=0.34.2",
]
